css/style.css
html, body {
    height: 100vh;
    scroll-behavior: smooth;
}

body {
    font-family: 'Source Sans Pro';
    color: #fff;
    background: linear-gradient( rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('../images/domenico-loia-hGV2TfOh0ns-unsplash.jpg');
    background-attachment: fixed;
    background-size: cover;
    overflow-x: hidden;
}

h1 {
    font-weight: 900;
    letter-spacing: -0.05em;
    margin-bottom: 50px;
    color: white;
}

@font-face {
    font-family: "Lima";
    font-style: normal;
    font-weight: 400;
    src: url(../fonts/Lima.woff) format('woff'), url(../fonts/Lima.woff2) format('woff2'), url(../fonts/Lima.ttf) format('ttf'), url(../fonts/Lima\ Font.svg) format('svg');
}

#home {
    margin-top: 3.9rem;
}

a {
    font-size: 0.92em;
    letter-spacing: 1px;
}

.nav-link {
    text-decoration: none;
    color: #fff;
    padding: 5px 4px;
}

.navbar-site {
    background: rgba(0, 0, 0, 0.6);
    -webkit-backdrop-filter: saturate(180%) blur(20px);
    backdrop-filter: saturate(180%) blur(20px);
    z-index: 3;
}

.nav-link.icon-send-after {
    text-decoration: none;
    color: #fff;
    padding: 5px 4px;
}

.nav-link.icon {
    text-decoration: none;
    color: #fff;
    padding-bottom: 0;
}

.nav-item a:hover {
    text-decoration: none;
    color: white;
    border-bottom: 1px solid white;
    box-sizing: border-box;
    display: inline-block;
}

.nav-link.icon-send-after:hover, .nav-link.icon-send-before:hover {
    transition: color 0.3s ease;
    color: #0DC143;
    border-bottom: 1px solid #0DC143;
}

.nav-link.icon-instagram-after:hover, .nav-link.icon-instagram-before:hover {
    transition: color 0.3s ease;
    color: #CE2589;
    border-bottom: 1px solid #CE2589;
}

.nav-link.icon-github-after:hover, .nav-link.icon-github-before:hover {
    transition: color 0.3s ease;
    color: #526AFF;
    border-bottom: 1px solid #526AFF;
}

.nav-link.icon-dribbble-after:hover, .nav-link.icon-dribbble-before:hover {
    transition: color 0.3s ease;
    color: #E74D89;
    border-bottom: 1px solid #E74D89;
}

.nav-link.icon-linkedin-after:hover, .nav-link.icon-linkedin-before:hover {
    transition: color 0.3s ease;
    color: #0e87ff;
    border-bottom: 1px solid #0e87ff;
    ;
}

.nav-link.icon-codepen-after:hover, .nav-link.icon-codepen-before:hover {
    transition: color 0.3s ease;
    color: #FFDD40;
    border-bottom: 1px solid #FFDD40;
}

.nav-item {
    padding-left: 30px;
    margin-top: 0;
    margin-bottom: 0;
}

.sr-only {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    overflow: hidden;
    clip: rect(0, 0, 0, 0);
    white-space: nowrap;
    border: 0;
}

.icons {
    border: 0;
    font-family: 'Lima';
    font-size: 1.5em;
    line-height: normal;
}

.icon-send-after::after, .icon-send-before::before {
    content: 'a';
}

.icon-instagram-after::after, .icon-instagram-before::before {
    content: 'b';
}

.icon-github-after::after, .icon-github-before::before {
    content: 'g';
}

.icon-linkedin-after::after, .icon-linkedin-before::before {
    content: 'd';
}

.icon-dribbble-after::after, .icon-dribbble-before::before {
    content: 'e';
}

.icon-codepen-after::after, .icon-codepen-before::before {
    content: 'f';
}

.icon-heart-after::after, .icon-heart-before::before {
    content: 'h';
}

.icon-lime-after::after, .icon-lime-before::before {
    content: 'A';
}

.icon-lima-after::after, .icon-lima-before::before {
    content: '*';
}

.icon-mail-after::after, .icon-mail-before::before {
    content: '9';
}

.icon-x-after::after, .icon-x-before::before {
    content: 'X';
}

.icons.icon-mail-before, .icons.icon-mail-after {
    font-size: 3em;
    display: inline-block;
}

.icons.icon-x-before, .icons.icon-x-after {
    font-size: 2em;
    color: #333;
}

#contato-header {
    display: inline-block;
    padding-bottom: 1em;
    border-bottom: 2px solid white;
}

::-webkit-scrollbar {
    width: 5px;
    height: 5px;
}

::-webkit-scrollbar-button {
    width: 0;
    height: 0;
}

::-webkit-scrollbar-thumb {
    background: #e1e1e1;
    border: 0 none #fff;
}

::-webkit-scrollbar-thumb:hover {
    background: #fff;
}

::-webkit-scrollbar-thumb:active {
    background: silver;
}

::-webkit-scrollbar-track {
    background: #667;
    border: 0 none #fff;
}

::-webkit-scrollbar-track:hover {
    background: #667;
}

::-webkit-scrollbar-track:active {
    background: #333;
}

::-webkit-scrollbar-corner {
    background: 0 0;
}

.hero-header {
    height: 100vh;
}

#footer-dev {
    height: available;
    background-color: rgba(0, 0, 0, 0.6);
    -webkit-backdrop-filter: saturate(180%) blur(20px);
    backdrop-filter: saturate(180%) blur(20px);
    padding: 50px 0px 20px 0px;
    position: relative;
    z-index: 1;
}

.size-footer {
    height: 100%;
}

@media (max-width: 991px) {
    .btn-custom {
        margin: 10px 15px;
    }
    .nav-item a {
        margin-bottom: 20px;
    }
    #logo-footer {
        margin-bottom: 25px;
    }
    h1 {
        font-size: 2em;
    }
    body {
        overflow-x: hidden;
    }

    #projetos-desenvolvidos {
        padding-top: 3rem;
    }
}

@media (max-width: 767px) {
    .apresentacao {
        padding-top: 0rem!important;
    }
    .hero-header {
        height: auto;
    }
}

.btn-outline-light {
    border: 2px solid #f8f9fa;
}

.icons.icon-lima-before {
    font-size: 2.5em;
    display: inline;
    line-height: normal;
    vertical-align: middle;
}

.text-easter {
    margin-bottom: 15px;
}

#copyright {
    display: inline;
    vertical-align: middle;
    font-size: 1.12em;
}

.icons.icon-lime-before:hover {
    transition: color 0.3s ease;
    color: #0cce6b;
}

.icons.icon-x-before:hover {
    transition: color 0.3s ease;
    color: #ef233c;
}

.icons.icon-heart-before {
    padding: 0 0.1em;
    font-size: 2em;
}

.icons.icon-heart-before:hover {
    transition: color 0.3s ease;
    color: #ef233c;
}

.icons.icon-lime-before {
    font-size: 5em;
    line-height: normal;
}

.hamburger-inner, .hamburger-inner::before, .hamburger-inner::after {
    width: 30px;
    height: 2px;
    background-color: #fff;
    border-radius: 4px;
    position: absolute;
}

.hamburger.is-active .hamburger-inner, .hamburger.is-active .hamburger-inner::before, .hamburger.is-active .hamburger-inner::after {
    background-color: #fff;
}

.modal-easter {
    background: #fff;
    padding: 2.4rem;
    position: relative;
    width: 90%;
    max-width: 500px;
    border-radius: 0.25rem;
}

.modal-easter-overlay {
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.7);
    position: fixed;
    top: 0;
    display: flex;
    align-items: center;
    justify-content: center;
    opacity: 0;
    visibility: hidden;
    z-index: 99999;
}

.modal-easter-overlay.active {
    opacity: 1;
    visibility: visible;
}

#form {
    max-width: 500px;
}

.button.new {
    margin-bottom: .8rem;
    display: inline-block;
}

.button.cancel {
    color: var(--red);
    border: 2px var(--red) solid;
    border-radius: 0.25rem;
    height: 50px;
    display: flex;
    align-items: center;
    justify-content: center;
    opacity: 0.6;
}

.button.cancel:hover {
    opacity: 1;
}

